; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_alloc_unit_number_by_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_alloc_unit_number_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@f_cuse = common dso_local global i64 0, align 8
@CUSE_ERR_INVALID = common dso_local global i32 0, align 4
@CUSE_ID_MASK = common dso_local global i32 0, align 4
@CUSE_IOCTL_ALLOC_UNIT_BY_ID = common dso_local global i32 0, align 4
@CUSE_ERR_NO_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cuse_alloc_unit_number_by_id(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* @f_cuse, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @CUSE_ERR_INVALID, align 4
  store i32 %10, i32* %3, align 4
  br label %25

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @CUSE_ID_MASK, align 4
  %14 = and i32 %12, %13
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  %16 = load i64, i64* @f_cuse, align 8
  %17 = load i32, i32* @CUSE_IOCTL_ALLOC_UNIT_BY_ID, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @ioctl(i64 %16, i32 %17, i32* %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %11
  %23 = load i32, i32* @CUSE_ERR_NO_MEMORY, align 4
  store i32 %23, i32* %3, align 4
  br label %25

24:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %22, %9
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @ioctl(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
